  it has been disabled - see the docs for more information (page
  https://django-photologue.readthedocs.org/en/latest/pages/customising/settings.html#photologue-enable-tags)
- Support for Django 1.4 and 1.5 has been dropped (Photologue depends on django-sortedm2m,
  which has dropped support for 1.4; and Django 1.5 is no longer supported).

List of changes:

- Support for Django 1.7's migrations framework.
- Support for Amazon S3 to store images (thank you Celia Oakley!).
- The Twitter-Bootstrap templates - previously in 'contrib' - become the default; the
  previous templates are moved to 'contrib'.
- Tagging is in the process of being removed.
- List views have changed urls: instead of /page/<n>/, we now have a /?page=<n> pattern.
  This is a more common style, and allows us to simplify template code e.g. paginators!
- date_taken field not correctly handled during single photo upload (#80).
- PHOTOLOGUE_USE_CKEDITOR has been removed.
- Removed deprecated PhotologueSitemap.
- Gallery zip uploads would fail if the title contained unicode characters.
- Gallery-uploads: Do not require title for uploading to existing gallery (#98). 


2.8.3 (2014-08-28)
------------------

- Updated Spanish translation.


2.8.2 (2014-07-26)
------------------

- The latest release of django-sortedm2m is not compatible with older 
  versions of Django, so don't use it (issue #92).


2.8.1 (2014-07-26)
------------------

- Fixed issue #94 (problem with i18n plural forms).
- Updated Slovak translation.

2.8 (2014-05-04)
----------------

Upgrade notes:

1. Photologue now depends on django-sortedm2m and django-model-utils - please
   refer to installation instructions. These dependencies should be added 
   automatically.

2. Run South migrations.

List of changes:

- Photo and Gallery models now support Django's sites framework.
- Photologue now uses django-sortedm2m to sort photos in a gallery.
- Major rewrite of zip archive uploader: warn users of files that could not be