@@ -20,7 +20,7 @@
 	{% endif %}
 
     <div class="row col-lg-12">
-        <a href="{% url 'pl-photo-archive-month' day.year day|date:"m"|lower %}" class="btn btn-default">{% trans "View all photos for month" %}</a>
+        <a href="{% url 'photologue-photo-archive-month' day.year day|date:"m"|lower %}" class="btn btn-default">{% trans "View all photos for month" %}</a>
     </div>
 
 {% endblock %}
