@@ -4,6 +4,9 @@ from django.conf import settings
 from django.views.generic.dates import ArchiveIndexView, DateDetailView, DayArchiveView, MonthArchiveView, YearArchiveView
 from django.views.generic.detail import DetailView
 from django.views.generic.list import ListView
+from django.views.generic.base import RedirectView
+from django.core.urlresolvers import reverse
+
 from .models import Photo, Gallery
 
 # Number of galleries to display per page.
@@ -32,7 +35,7 @@ class GalleryListView(ListView):
         if self.kwargs.get('deprecated_pagination', False):
             warnings.warn(
                 DeprecationWarning('Page numbers should now be passed via a page query-string parameter.'
-                                   ' The old style "/page/n/"" will be removed in Photologue 3.2'))
+                                   ' The old style "/page/n/"" will be removed in Photologue 3.2.'))
         return context
 
 
@@ -109,3 +112,87 @@ class PhotoMonthArchiveView(PhotoDateView, MonthArchiveView):
 
 class PhotoYearArchiveView(PhotoDateView, YearArchiveView):
     make_object_list = True
+
+
+# Deprecated views.
+
+class DeprecatedMonthMixin(object):
+
+    """Representation of months in urls has changed from a alpha representation ('jan' for January)
+    to a numeric representation ('01' for January).
+    Properly deprecate the previous urls."""
+
+    query_string = True
+
+    month_names = {'jan': '01',
+                   'feb': '02',
+                   'mar': '03',
+                   'apr': '04',
+                   'may': '05',
+                   'jun': '06',
+                   'jul': '07',
+                   'aug': '08',
+                   'sep': '09',
+                   'oct': '10',
+                   'nov': '11',
+                   'dec': '12', }
+
+    def get_redirect_url(self, *args, **kwargs):
+        print('a')
+        warnings.warn(
+            DeprecationWarning('Months are now represented in urls by numbers rather than by '
+                               'their first 3 letters. The old style will be removed in Photologue 3.2.'))
+
+
+class GalleryDateDetailOldView(DeprecatedMonthMixin, RedirectView):
+
+    def get_redirect_url(self, *args, **kwargs):
+        super(GalleryDateDetailOldView, self).get_redirect_url(*args, **kwargs)
+        return reverse('photologue-gallery-detail', kwargs={'year': kwargs['year'],
+                                                            'month': self.month_names[kwargs['month']],
+                                                            'day': kwargs['day'],
+                                                            'slug': kwargs['slug']})
+
+
+class GalleryDayArchiveOldView(DeprecatedMonthMixin, RedirectView):
+
+    def get_redirect_url(self, *args, **kwargs):
+        super(GalleryDayArchiveOldView, self).get_redirect_url(*args, **kwargs)
+        return reverse('photologue-gallery-archive-day', kwargs={'year': kwargs['year'],
+                                                                 'month': self.month_names[kwargs['month']],
+                                                                 'day': kwargs['day']})
+
+
+class GalleryMonthArchiveOldView(DeprecatedMonthMixin, RedirectView):
+
+    def get_redirect_url(self, *args, **kwargs):
+        super(GalleryMonthArchiveOldView, self).get_redirect_url(*args, **kwargs)
+        return reverse('photologue-gallery-archive-month', kwargs={'year': kwargs['year'],
+                                                                   'month': self.month_names[kwargs['month']]})
+
+
+class PhotoDateDetailOldView(DeprecatedMonthMixin, RedirectView):
+
+    def get_redirect_url(self, *args, **kwargs):
+        super(PhotoDateDetailOldView, self).get_redirect_url(*args, **kwargs)
+        return reverse('photologue-photo-detail', kwargs={'year': kwargs['year'],
+                                                          'month': self.month_names[kwargs['month']],
+                                                          'day': kwargs['day'],
+                                                          'slug': kwargs['slug']})
+
+
+class PhotoDayArchiveOldView(DeprecatedMonthMixin, RedirectView):
+
+    def get_redirect_url(self, *args, **kwargs):
+        super(PhotoDayArchiveOldView, self).get_redirect_url(*args, **kwargs)
+        return reverse('photologue-photo-archive-day', kwargs={'year': kwargs['year'],
+                                                               'month': self.month_names[kwargs['month']],
+                                                               'day': kwargs['day']})
+
+
+class PhotoMonthArchiveOldView(DeprecatedMonthMixin, RedirectView):
+
+    def get_redirect_url(self, *args, **kwargs):
+        super(PhotoMonthArchiveOldView, self).get_redirect_url(*args, **kwargs)
+        return reverse('photologue-photo-archive-month', kwargs={'year': kwargs['year'],
+                                                                 'month': self.month_names[kwargs['month']]})
